# prophet-price-prediction-for-bitcoin

./: .gitignore  CLAUDE.md  README.md  app.py  prepare_data.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: daily_close.csv  hourly_close.csv  weekly_close.csv
notebooks/: MAICEN1125_M5U1_Time_Series_bonus_track_bitcoin.ipynb  MAICEN1125_M5U1_Time_Series_bonus_track_bitcoin.txt
pages/: 1_data_explorer.py  2_seasonality.py  3_halving_cycles.py  4_statistical_analysis.py  5_prophet_forecast.py
